trunk/Archive2/1a/1ab7d3df9a3263/output
main.cpp: In function 'int main()':
main.cpp:10:49: error: 'n' was not declared in this scope
     c.erase(std::remove_if(c.begin(), c.end(), (n < x) ), c.end());
                                                 ^
